<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BMIResult">

    <TextView
        android:id="@+id/yourResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourResult"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.237" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.321" />

    <TextView
        android:id="@+id/underweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/underweight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kgm2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kgm2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.412" />

    <Button
        android:id="@+id/repeatCalculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repeatCalculation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.589" />

    <TextView
        android:id="@+id/overweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overweight"
        tools:layout_editor_absoluteX="304dp"
        tools:layout_editor_absoluteY="423dp" />

    <TextView
        android:id="@+id/normalweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/normalWeight"
        tools:layout_editor_absoluteX="293dp"
        tools:layout_editor_absoluteY="424dp" />
</androidx.constraintlayout.widget.ConstraintLayout>